<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket-WBS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_element">ViewElementActivity</string>
    <string name="element_name_text">Element Name: </string>
    <string name="direction_up_text">Up</string>
    <string name="direction_down_text">Down</string>
    <string name="direction_left_text">Left</string>
    <string name="direction_right_text">Right</string>
    <string name="element_key_text">"Element "</string>
    <string name="title_activity_edit_element">EditElementActivity</string>
    <string name="edit_page_id_display">"Element ID: "</string>
    <string name="edit_page_name_display">Element Name:</string>
    <string name="element_name_request">Please enter a new name...</string>
    <string name="element_edit_confirm">Confirm</string>
    <string name="select_element_edit">Edit</string>
    <string name="view_element_name">View Element</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="create_wbs_string">&quot;Create WBS&quot;</string>
    <string name="view_saved_wbs_string">&quot;View Saved WBSs&quot;</string>
    <string name="index_text">Index: </string>
    <string name="activities_text">Activities: </string>
    <string name="activity_description">Activity Description: </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="budget_string">&quot;Budget: &quot;</string>
    <string name="duration_string">&quot;Duration (days): &quot;</string>
    <string name="manager_string">&quot;Manager: &quot;</string>
    <string name="cost_string">"Actual Cost: "</string>
    <string name="date_divider">/</string>
    <string name="starting_date">Start Date:</string>
    <string name="finish_date">Finish Date:</string>
    <string name="date_format_description">Date Format: dd/mm/yyyy</string>
    <string name="sub_element_budget_string">"Sub-Element Budget Total: "</string>
    <string name="remaining_budget">"Remaining Budget: "</string>
    <string name="work_text">Work (Hours)</string>
    <string name="title_activity_load_wbs">Load</string>
    <string name="hello_world">Hello world!</string>
    <string name="load_screen_text">Please Select a File</string>
    <string name="empty_string"></string>
    <string name="new_wbs_button_text">New WBS</string>
    <string name="open_wbs_text">Open WBS</string>
    <string name="delete_warning">Long press to delete files</string>
    <string name="title_activity_file_browser">Browse Exported Files</string>
    <string name="wbs_import_text">Browse for Exported WBS Files</string>
    <string name="export_browse_text">Browse SD Card for Exports</string>
    <string name="file_select_button_text">Select File</string>
    <string name="selected_file_text_default">"Selected File: "</string>
    <string name="back_button_browser_text">Go to Previous</string>
    <string name="exit_symbol">x</string>
    <string name="exit_text">Close [x]</string>
    <string name="title_activity_export_directory">Export Tree</string>
    <string name="export_directory_selected">"Selected Directory: "</string>
    <string name="export_location_title">Select an Export Destination</string>
    <string name="previous_text">Previous</string>
    <string name="export_confirm">Export Here</string>
    <string name="new_folder_button_text">New Folder</string>
    <string name="select_text">Select</string>
    <string name="file_select_string">Select File</string>

</resources>
