<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:label="@string/view_element_name"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pocket_wbs.ViewElementActivity" >

    <Button
        android:id="@+id/moveLeft"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="left|center_vertical"
        android:text="@string/direction_left_text" />

    <Button
        android:id="@+id/moveUp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="top|center_horizontal"
        android:text="@string/direction_up_text" />

    <Button
        android:id="@+id/moveRight"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="right|center_vertical"
        android:text="@string/direction_right_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/moveRight"
        android:layout_centerHorizontal="true"
        android:gravity="top|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/elementKeyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element_key_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/elementNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:text="@string/element_name_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <Button
        android:id="@+id/editElementButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moveRight"
        android:layout_centerHorizontal="true"
        android:text="@string/select_element_edit" />

    <Button
        android:id="@+id/moveDown"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/direction_down_text" />

</RelativeLayout>
