<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pocket_wbs.FileBrowserActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/exportBrowserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wbs_import_text"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/selectedFileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_file_text_default"
            android:textColor="#0000FF" />

        <ListView
            android:id="@+id/fileBrowserList"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#FFFFFF"
            android:paddingTop="5dp" >
        </ListView>

        <Button
            android:id="@+id/backFileBrowser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/back_button_browser_text"
            android:visibility="invisible" />

        <Button
            android:id="@+id/selectButtonBrowser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/file_select_button_text"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>
