<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project_pocket_wbs.pocket_wbs.EditElementActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/elementIDEditPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_page_id_display"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/elementNameEditPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_page_name_display"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/elementRequestNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="99dp"
            android:text="@string/element_name_request"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editElementNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/editConfimationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/element_edit_confirm" />

    </LinearLayout>

</RelativeLayout>