<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pocket_wbs.ExportDirectoryActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/exportDirectoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_location_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/directoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_file_text_default"
            android:textColor="#0000FF" />

        <ListView
            android:id="@+id/fileBrowserList"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#FFFFFF"
            android:paddingTop="5dp" >
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left" >

                <Button
                    android:id="@+id/backFileBrowser"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/previous_text"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <Button
                    android:id="@+id/selectButtonBrowser"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/export_confirm"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/newFolderButton"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/new_folder_button_text" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
