<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pocket_wbs.LoadWBSActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/loadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/load_screen_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fileListTestText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_warning"
            android:textColor="#FF0000" />

        <ListView
            android:id="@+id/fileSelectList"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="#FFFFFF"
            android:paddingTop="5dp" >
        </ListView>

        <Button
            android:id="@+id/addAttributeActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_browse_text" />

    </LinearLayout>

</RelativeLayout>
