<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#BDBDBD"
  	>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left|right"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right" >

                        <Button
                            android:id="@+id/exitEditActivityButton"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="34dp"
                            android:gravity="right"
                            android:minHeight="30dp"
                            android:minWidth="30dp"
                            android:text="@string/exit_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left" >

                        <TextView
                            android:id="@+id/activity_description_tag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/activity_description"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>
                </LinearLayout>

                <EditText
                    android:id="@+id/activity_description_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="17dp"
                    android:layout_marginTop="17dp"
                    android:background="#FFFFFF"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:textColor="#585858" >

                    <requestFocus />
                </EditText>

                <LinearLayout
                    android:id="@+id/attributesLayoutActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp" >

                        <TextView
                            android:id="@+id/activityHeadingText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/budget_string"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/activityBudgetEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:inputType="numberDecimal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp" >

                        <TextView
                            android:id="@+id/activityBudgetCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cost_string"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/activityCostEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:inputType="numberDecimal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp" >

                        <TextView
                            android:id="@+id/startDateText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/starting_date"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editStartDay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="2" />

                        <TextView
                            android:id="@+id/dateDivider1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_divider"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editStartMonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="2" />

                        <TextView
                            android:id="@+id/dateDivider2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_divider"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editStartYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp" >

                        <TextView
                            android:id="@+id/finishDateText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/finish_date"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editFinishDay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="2" />

                        <TextView
                            android:id="@+id/dateDivider3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_divider"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editFinishMonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="2" />

                        <TextView
                            android:id="@+id/dateDivider4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_divider"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/editFinishYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="4" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/fileListTestText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_format_description"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FF0000"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/addAttributeActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp"
                        android:minWidth="30dp"
                        android:onClick="nameCustomAlert"
                        android:text="+"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

</RelativeLayout>
